--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "version": "1.0.0",
+    "version": "1.1.0",
     "license": "MIT",
     "main": "dist/index.js",
+    "module": "dist/index.js",
     "typings": "dist/index.d.ts",
     "repository": "andrydharmawan/bgs-form",
     "files": [
-        "dist",
-        "styles"
+        "dist"
     ],
     "engines": {
         "node": ">=10"
@@ -38,7 +38,6 @@
     },
     "name": "@andrydharmawan/bgs-form",
     "author": "Andry Bagus Dharmawan",
-    "module": "dist/bgs-form.esm.js",
     "size-limit": [
         {
             "path": "dist/bgs-form.cjs.production.min.js",
@@ -50,46 +49,38 @@
         }
     ],
     "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@size-limit/preset-small-lib": "^7.0.8",
-        "@storybook/addon-essentials": "^6.4.18",
+        "@babel/core": "^7.24.0",
+        "@size-limit/preset-small-lib": "^11.0.2",
+        "@storybook/addon-essentials": "^7.6.17",
         "@storybook/addon-info": "^5.3.21",
-        "@storybook/addon-links": "^6.4.18",
-        "@storybook/addons": "^6.4.18",
-        "@storybook/react": "^6.4.18",
-        "@types/react": "^18.0.9",
-        "@types/react-beautiful-dnd": "^13.1.2",
-        "@types/react-dom": "^18.0.3",
-        "babel-loader": "^8.2.3",
-        "crypto-js": "^4.1.1",
-        "husky": "^7.0.4",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-is": "^17.0.2",
-        "react-redux": "^7.2.8",
-        "size-limit": "^7.0.8",
-        "sweetalert2": "^11.3.0",
+        "@storybook/addon-links": "^7.6.17",
+        "@storybook/addons": "^7.6.17",
+        "@storybook/react": "^7.6.17",
+        "@types/react": "^18.2.63",
+        "@types/react-dom": "^18.2.19",
+        "babel-loader": "^9.1.3",
+        "husky": "^9.0.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-is": "^18.2.0",
+        "size-limit": "^11.0.2",
         "tsdx": "^0.14.1",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.5"
+        "tslib": "^2.6.2",
+        "typescript": "^3.9.10"
     },
     "dependencies": {
-        "@mui/icons-material": "^5.2.1",
-        "@mui/material": "^5.8.6",
-        "@mui/styles": "^5.2.3",
-        "@mui/x-date-pickers": "^5.0.0-alpha.7",
-        "@types/date-fns": "^2.6.0",
-        "@types/uuid": "^8.3.4",
-        "cssnano": "^5.1.14",
-        "material-ui-popup-state": "^2.0.0",
-        "moment": "^2.29.1",
-        "node-sass": "^6.0.1",
-        "react-beautiful-dnd": "^13.1.1",
-        "react-hook-form": "^7.22.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.15.11",
+        "@mui/material": "^5.15.11",
+        "@mui/x-date-pickers": "^6.19.6",
+        "material-ui-popup-state": "^5.0.10",
+        "moment": "^2.30.1",
+        "query-string": "^9.0.0",
+        "react-hook-form": "^7.51.0",
         "react-imask": "^6.2.2",
-        "react-number-format": "^4.9.0",
-        "redux": "^4.2.0",
-        "rollup-plugin-scss": "^3.0.0",
-        "uuid": "^8.3.2"
+        "react-number-format": "^5.3.3",
+        "react-router-dom": "^6.22.2",
+        "uuid": "^9.0.1"
     }
 }
